# nixos

./: .gitignore  .nvimlog  AGENTS.md  CLAUDE.md  README.md  flake.nix  result
derivations/: codex.nix  consolas-nerd-font.nix  fff-mcp.nix  ioskeley-mono.nix  kde-windows-98-theme.nix  krohnkite.nix  modernxp-cursor.nix  plannotator.nix  reactionary-theme.nix  se98-icons.nix
dotfiles/: .gitconfig  .zshrc
dotfiles/.agents/: .skill-lock.json  AGENTS.md  RUST.md
dotfiles/.agents/skills/: superpowers
dotfiles/.aws/: config
dotfiles/.cargo/: config.toml
dotfiles/.claude/: settings.json
dotfiles/.codex/: config.toml
dotfiles/.config/: kubeconfig  mimeapps.list
dotfiles/.config/alacritty/: tmux.sh  (+1 more)
dotfiles/.scripts/: dconf.sh  display-settings.sh  gamescope.sh  kanshi.sh  lock.sh  ralph.sh  safe_env.sh  screencap.sh  steam.sh  suspend.sh  tfh.sh  wallpaper.sh  workstreams.sh  xtask-completion.zsh  zed.sh
home/: apps.nix  dconf.nix  default.nix  kde.nix  services.nix  steam.nix
hosts/fw13tfh/: default.nix  hardware-configuration.nix
hosts/vm-gl502v/: default.nix  hardware-configuration.nix
hosts/vm-raiderge67hx/: default.nix  hardware-configuration.nix
hosts/vm-thinkpadx111/: default.nix  hardware-configuration.nix
modules/: gnome.nix  hyprland.nix  kde.nix  pkgs.nix  services.nix  steam.nix  sway.nix  system.nix
utils/: mk-plasma-theme.nix
xtask/: Cargo.toml  README.md
xtask/src/: lib.rs  main.rs
xtask/src/cmd/: agentmd.rs  build.rs  mod.rs  ws.rs
xtask/src/workstream/: agent.rs  fs.rs  loop.rs  mod.rs  model.rs
xtask/tests/: ws.rs
(+113 files in other folders)
