[package]
name = "x"
version = "0.0.1"
description = """
Command runner
"""
authors = ["Victor Menge <victotr.ferreira.menge@toolsforhumanity.com>"]
publish = false
edition = "2024"

[features]
default = []
ws-agent-runner = ["dep:nono"]

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
color-eyre = "0.6.5"
nono = { version = "0.20.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[[bin]]
name = "ws-agent-runner"
path = "src/bin/ws-agent-runner.rs"
required-features = ["ws-agent-runner"]
